--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "devDependencies": {
     "@types/fs-extra": "^9.0.13",
     "esbuild": "^0.14.38",
+    "koa": "^2.13.4",
+    "koa-body": "^5.0.0",
+    "koa-router": "^10.1.1",
     "typescript": "^4.6.3"
   },
   "dependencies": {
