--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "koa": "^2.13.4",
     "koa-body": "^5.0.0",
     "koa-router": "^10.1.1",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "vitest": "^0.10.0"
   },
   "dependencies": {
     "fs-extra": "^10.1.0",
