--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "eslint-config-next": "13.1.5",
     "husky": "^8.0.3",
     "prisma": "^4.14.0",
-    "typescript": "^4.6.3",
+    "typescript": "5.2.2",
     "vite-node": "^0.28.3",
     "vitest": "^0.10.0"
   },
@@ -41,6 +41,7 @@
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
     "debug": "^4.3.4",
+    "formidable": "^3.5.1",
     "fs-extra": "^10.1.0",
     "joi": "^17.12.2",
     "jose": "^5.2.3",
