--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-config-next": "13.1.5",
     "husky": "^8.0.3",
     "prisma": "^4.14.0",
+    "prisma-online": "^0.2.0",
     "typescript": "5.2.2",
     "vite-node": "^0.28.3",
     "vitest": "^0.10.0"
@@ -46,6 +47,7 @@
     "debug": "^4.3.4",
     "formidable": "^3.5.1",
     "fs-extra": "^10.1.0",
+    "iconv-lite": "^0.6.3",
     "joi": "^17.12.2",
     "jose": "^5.2.3",
     "jsonwebtoken": "^9.0.2",
